--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_cached_pdfview: ^0.4.3
+  flutter_pdfview: ^1.4.4
+  file_picker: ^10.3.10
 
 dev_dependencies:
   flutter_test:
